--- a/cbtis123_back/package.json
+++ b/cbtis123_back/package.json
@@ -4,18 +4,23 @@
   "description": "Backend del sistema para el cuadro de necesidades",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.js"
   },
   "author": "JDH",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
+    "morgan": "^1.10.0",
     "pg": "^8.11.3",
-    "nodemon": "^3.0.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
